--- a/app/globals.css
+++ b/app/globals.css
@@ -10,10 +10,12 @@
     }
 }
 
-ion-content, ion-content::part(background) {
+ion-content,
+ion-content::part(background) {
     background: transparent;
 }
 
-ion-menu, ion-menu::part(container) {
+ion-menu,
+ion-menu::part(container) {
     background: transparent;
 }
